// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ init/ basic/ 1`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ init/ basic/ 2`] = `
Array [
  "bar.ch1.md",
  "bar.md",
  "bar.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;
